--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
                 <img src="images/david.jpeg" alt="El guapo a.k.a. David">
             </div>
             <div>
-                <h2>St. George, Utah, USA</h2>
-                <!-- subtitles for image-->
+                <h1>St. George, Utah, USA</h2>
+                    <!-- subtitles for image-->
 
-                <img src="images/stgeorge.jpg" alt="Red rocks of St. George Utah">
-                <caption>The Red rocks of St. George Utah</caption>
-                <p>
-                    St. George Utah is known for its blistering heat and red-rock gorgeous views. It has a few secrets
-                    such as a Freddy's Frozen Custard parlor and a couple of trees. All joking aside, St. George is a
-                    lovely place.</p>
+                    <img src="images/stgeorge.jpg" alt="Red rocks of St. George Utah">
+                    <caption>The Red rocks of St. George Utah</caption>
+                    <p>
+                        St. George Utah is known for its blistering heat and red-rock gorgeous views. It has a few
+                        secrets
+                        such as a Freddy's Frozen Custard parlor and a couple of trees. All joking aside, St. George is
+                        a
+                        lovely place.</p>
             </div>
         </section>
         <section class="card">
@@ -87,8 +89,8 @@
         <p id="lastModified">
         </p>
     </footer>
-
-    <script src="scripts/getdates.js"></script>
+    <!-- use defer -->
+    <script src="scripts/getdates.js" defer></script>
 </body>
 
 </html>
