--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 - Dynamic Web Fundamentals - David Valentine</title>
-    <meta description="WDD 131 - Dynamic Web Fundamentals - David Valentine">
+    <meta description="WDD 131 - Dynamic Web Fundamentals - David Valentine - About Me Page">
     <meta author="David Valentine">
     <link rel="stylesheet" href="styles/base.css">
 </head>
@@ -39,16 +39,16 @@
             </div>
             <div>
                 <h1>St. George, Utah, USA</h1>
-                    <!-- subtitles for image-->
+                <!-- subtitles for image-->
 
-                    <img src="images/stgeorge.jpg" alt="Red rocks of St. George Utah">
-                    <caption>The Red rocks of St. George Utah</caption>
-                    <p>
-                        St. George Utah is known for its blistering heat and red-rock gorgeous views. It has a few
-                        secrets
-                        such as a Freddy's Frozen Custard parlor and a couple of trees. All joking aside, St. George is
-                        a
-                        lovely place.</p>
+                <img src="images/stgeorge.jpg" alt="Red rocks of St. George Utah">
+                <caption>The Red rocks of St. George Utah</caption>
+                <p>
+                    St. George Utah is known for its blistering heat and red-rock gorgeous views. It has a few
+                    secrets
+                    such as a Freddy's Frozen Custard parlor and a couple of trees. All joking aside, St. George is
+                    a
+                    lovely place.</p>
             </div>
         </section>
         <section class="card">
