w02 temple viewer - minor styling updates

--- a/temples.html
+++ b/temples.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Small</a></li> -->
             <button id="hamburger-menu"></button>
             <div class="menu">
-                <a href="#">Home</a>
+                <a class='active' href="#">Home</a>
                 <a href="#">Old</a>
                 <a href="#">New</a>
                 <a href="#">Large</a>
