--- a/temples.html
+++ b/temples.html
@@ -85,7 +85,7 @@
         </p>
     </footer>
     <!-- use defer -->
-    <script src="../scripts/getdates.js" defer></script>
+    <script src="./scripts/getdates.js" defer></script>
 </body>
 <script src="scripts/temples.js" defer>
 
