--- a/temples.html
+++ b/temples.html
@@ -22,7 +22,7 @@
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
                 <li><a href="#">Small</a></li> -->
-            <button id="hamburger-menu"></button>
+            <button id="hamburger-menu" alt="menu-button"></button>
             <div class="menu">
                 <a class='active' href="#">Home</a>
                 <a href="#">Old</a>
