w02 temple viewer - button aria-label

--- a/temples.html
+++ b/temples.html
@@ -23,7 +23,7 @@
                 <li><a href="#">New</a></li>
                 <li><a href="#">Large</a></li>
                 <li><a href="#">Small</a></li> -->
-            <button id="hamburger-menu" alt="menu-button"></button>
+            <button id="hamburger-menu" aria-label="Open Menu"></button>
             <div class="menu">
                 <a class='active' href="#">Home</a>
                 <a href="#">Old</a>
