--- a/temples.html
+++ b/temples.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <meta
-        description="view images of the temples of the church of jesus christ of latter-day saints, wdd131 assignment demonstrating responsive js, css web page, temple image viewing">
+    <meta name="description"
+        content="view images of the temples of the church of jesus christ of latter-day saints, wdd131 assignment demonstrating responsive js, css web page, temple image viewing">
     <meta author="David Valentine">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
