--- a/temples.html
+++ b/temples.html
@@ -80,7 +80,7 @@
 
         </div>
     </main>
-    <footer class="bluetheme">
+    <footer>
         <p><span id="currentyear"></span> </p>
         <p id="lastModified">
         </p>
