--- a/place.html
+++ b/place.html
@@ -56,11 +56,11 @@
                         </tr>
                         <tr>
                             <th>Destinations</th>
-                            <th>Info</th>
+                            <th>Panama Canal, Bocas Del Torro, Colón</th>
                         </tr>
                         <tr>
                             <th>Cuisine</th>
-                            <th>Rdice and Baynes + Patacones</th>
+                            <th>Rice and beans w/ Chicken + Patacones</th>
                         </tr>
                     </table>
                 </div>
@@ -96,7 +96,7 @@
     </main>
     <footer>
         <p><span id="currentyear"></span> </p>
-        <p>We are digging to Antarctica 🐧</p>
+        <!-- <p>We are digging to Antarctica 🐧</p> -->
         <p id="lastModified"></p>
     </footer>
     <script src="./scripts/getdates.js" defer></script>
