W03 country stats update V3

--- a/place.html
+++ b/place.html
@@ -37,6 +37,7 @@
                     <table class="stat-table">
                         <tr>
                             <th>Population</th>
+                            <th>4.4 Million</th>
                         </tr>
                         <tr>
                             <th>Language</th>
@@ -48,7 +49,7 @@
                         </tr>
                         <tr>
                             <th>Timezone</th>
-                            <th>EST</th>
+                            <th>Eastern Standard Time</th>
                         </tr>
                         <tr>
                             <th>Calling Code</th>
