W04 Dynamic Filters Update Temple image site V1

--- a/temples.html
+++ b/temples.html
@@ -37,10 +37,17 @@
         <h1>Home</h1>
         <!-- figure with captions -->
         <div>
-            <figure>
-                <img src="/wdd131/images/st-george-temple-1.jpg" alt="St. George Temple Drone View">
-                <figcaption>St. George Temple</figcaption>
-            </figure>
+            <div>
+                <ul>
+                    <li>Name: St. George Temple</li>
+                    <li>Location: St. George, Utah</li>
+                    <li>Dedicated: 1877</li>
+                    
+                </ul>
+                <figure>
+                    <img src="/wdd131/images/st-george-temple-1.jpg" alt="St. George Temple Drone View">
+                </figure>
+            </div>
             <figure>
                 <img src="/wdd131/images/st-george-temple-1.jpg" alt="St. George Temple Drone View">
                 <figcaption>St. George Temple</figcaption>
