W03 Update meta and fix svg

--- a/place.html
+++ b/place.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panama</title>
-    <meta description="A site about Panama">
-    <meta author="David V">
+    <title>Panamá</title>
+    <meta name="description" content="A view of Panama's weather and common facts">
+    <meta name="author" content="David V">
     <link rel="stylesheet" href="styles/place-large.css">
     <link rel="stylesheet" href="styles/place-mobile.css">
 </head>
@@ -71,6 +71,7 @@
                     <div>
                         <h2>Weather</h2>
                     </div>
+                    <img src="images/Weather-Clouds-Icon.svg" alt="Partly Cloudy" width="100px">
                     <table class="stat-table">
                         <tr>
                             <th>Temp</th>
@@ -79,7 +80,6 @@
                         <tr>
                             <th>Conditions</th>
                             <th>Partly Cloudy</th>
-
                         </tr>
                         <tr>
                             <th>Wind</th>
