--- a/place.html
+++ b/place.html
@@ -71,7 +71,7 @@
                     <div>
                         <h2>Weather</h2>
                     </div>
-                    <img src="images/Weather-Clouds-Icon.svg" alt="Partly Cloudy" width="100px">
+                    <img src="images/Weather-Clouds-Icon.svg" alt="Partly Cloudy" width="100">
                     <table class="stat-table">
                         <tr>
                             <th>Temp</th>
