--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panamá</title>
+    <title>Panamá Weather and Facts</title>
     <meta name="description" content="A view of Panama's weather and common facts">
     <meta name="author" content="David V">
     <link rel="stylesheet" href="styles/place-large.css">
