--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Filterable Temple images</title>
     <meta name="description"
         content="view images of the temples of the church of jesus christ of latter-day saints, wdd131 assignment demonstrating responsive js, css web page, temple image viewing">
-    <meta author="David Valentine">
+    <meta name="author" content="David Valentine">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
 </head>
@@ -38,9 +38,10 @@
         </p>
     </footer>
     <script src="./scripts/getdates.js" defer></script>
+    <script src="scripts/filtered-temples.js" type="module">
+    </script>
 </body>
-<script src="scripts/filtered-temples.js" type="module" defer>
-</script>
+
 
 
 
