--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -27,7 +27,7 @@
         </nav>
     </header>
     <main>
-        <h1>Home</h1>
+        <h1>Temples</h1>
         <script type="module" src="scripts/filtered-temple-json.js"></script>
         <div class="temple-cards">
         </div>
