--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -28,6 +28,7 @@
     </header>
     <main>
         <h1>Temples</h1>
+        <h2 class="active-selection">All</h2>
         <script type="module" src="scripts/filtered-temple-json.js"></script>
         <div class="temple-cards">
         </div>
