--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <nav class="navigation">
-            <a class="start">Temple Album</a>
+            <h1 class="start">Temple Album </h1>
             <button id="hamburger-menu" aria-label="Open Menu"></button>
             <div class="menu">
                 <a class='active home reg' href="#">Home</a>
