--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
     <title>Form</title>
     <meta name="author" description="David V">
     <meta name="description" description="A form page">
-    <link rel="stylesheet" href="/styles/form.css">
+    <link rel="stylesheet" href="styles/form.css">
 </head>
 
 <body>
