--- a/project/project.html
+++ b/project/project.html
@@ -23,10 +23,9 @@
             </div>
             <div class="subline"></div>
         </div>
-
         <nav>
             <ul class="navigation">
-                <li><a href="../index.html">Home</a></li>
+                <li> <a href="project.html">Home</a></li>
                 <li><a href="budgets.html">Budget</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
@@ -35,50 +34,55 @@
     </header>
     <main class="project">
         <section class="hero">
-            <div>
-                <h1>Meet the team</h1>
-            </div>
+
+            <h1>Meet the team</h1>
+
             <div class="hero-start">
+                <div class="hero-image">
+                    <figure>
+                        <picture>
+                            <source media="(max-width: 800px)" srcset="./images/family-photo-mobile.jpeg">
+                            <!-- min-width="450" min-height="600" -->
+                            <source media="(max-width: 1000px)" srcset="./images/family-photo-mobile.jpeg">
+                            <!-- min-width="550" min-height="500" -->
+                            <img src="./images/family-photo.jpeg" alt="The Valentine Family" lazy="loading">
+                            <!-- min-height="625" -->
 
-                <figure class="image-beauty hero-image">
-                    <picture>
-                        <source media="(min-width: 1024px)" srcset="./images/family-photo.jpeg" width="600">
-                        <source media="(min-width: 768px)" srcset="./images/family-photo-mobile.jpeg" height="600">
-                        <img src="./images/family-photo-medium.jpeg" alt="The Valentine Family" height="600">
-                    </picture>
-                    <figcaption>The Valentine Family</figcaption>
+                        </picture>
+                        <figcaption>The Valentine Family</figcaption>
+                </div>
                 </figure>
-                <aside>
-                    <figure class="image-beauty">
-                        <picture>
-                            <source media="(min-width: 1024px)" srcset="./images/me2.png" width="200" height="150">
-                            <source media="(min-width: 768px)" srcset="./images/me2.png" width="200">
-                            <img src="./images/me2.png" alt="Daddy Shark" width="200">
-                        </picture>
-                        <figcaption>Daddy Shark</figcaption>
-                    </figure>
-
-                    <figure class="image-beauty">
-                        <picture>
-                            <source media="(min-width: 1024px)" srcset="./images/v1.png" width="200" height="150">
-                            <source media="(min-width: 768px)" srcset="./images/v1.png" width="200">
-                            <img src="./images/v1.png" alt="Momma Shark" width="200">
-                        </picture>
-                        <figcaption>Momma Shark</figcaption>
-                    </figure>
-
-                    <figure class="image-beauty">
-                        <picture>
-                            <source media="(min-width: 1024px)" srcset="./images/baby.PNG" width="200" height="150">
-                            <source media="(min-width: 768px)" srcset="./images/baby.PNG" width="200" height="150">
-                            <img src="./images/baby.PNG" alt="Baby Shark" width="200" height="250">
-                        </picture>
-                        <figcaption>Baby Shark</figcaption>
-                    </figure>
-                </aside>
+                <!-- <aside> -->
+                <figure class="hero-child">
+                    <picture>
+                        <source media="(max-width: 800px)" srcset="./images/me2-mobile.jpeg">
+                        <source media="(max-width: 1000px)" srcset="./images/me2-mobile.jpeg">
+                        <img src="./images/me2.png" alt="Daddy Shark" lazy="loading">
+                    </picture>
+                    <figcaption>Daddy Shark</figcaption>
+                </figure>
+                <figure class="hero-child">
+                    <picture>
+                        <source media="(max-width: 800px)" srcset="./images/v1-mobile.jpeg">
+                        <source media="(max-width: 1000px)" srcset="./images/v1-mobile.jpeg">
+                        <img src="./images/v1.png" alt="Momma Shark" lazy="loading">
+                    </picture>
+                    <figcaption>Momma Shark</figcaption>
+                </figure>
+                <figure class="hero-child">
+                    <picture>
+                        <source media="(max-width: 800px)" srcset="./images/baby-mobile.jpeg">
+                        <!-- min-width="200" min-height="180" -->
+                        <source media="(max-width: 1000px)" srcset="./images/baby-mobile.jpeg">
+                        <img src="./images/baby.png" alt="Baby Shark">
+                        <!-- min-width="200" min-height="180" lazy="loading" -->
+                    </picture>
+                    <figcaption>Baby Shark</figcaption>
+                </figure>
+                <!-- </aside> -->
             </div>
         </section>
-        <div class="sublines">
+        <div class="sublines sublineshero">
             <div class="subline"></div>
             <div class="h1title h1block h2block sectionstarter">
                 <h2>Family Plans</h1>
@@ -86,18 +90,18 @@
             <div class="subline"></div>
         </div>
         <section class="family-plans">
-            <h1>Family Calendar</h1>
-            <iframe
-                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23dae8f6&title=The%20Valentine%20Family%20&src=ZmFtaWx5MTczOTkyMzUzMTkxNzMzMTYwOTdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23A79B8E"
-                 width="900" height="600" frameborder="0" scrolling="no"></iframe>
-            <h1>Violets's Calendar</h1>
-            <iframe src="https://calendar.google.com/calendar/embed?src=purplepal96.8%40gmail.com&ctz=America%2FDenver"
-                 width="850" height="600" frameborder="0" scrolling="no"></iframe>
-            <h1>David's Calendar</h1>
-            <iframe class="calendar cthree"
-                src="https://calendar.google.com/calendar/embed?src=centervalentine%40gmail.com&ctz=America%2FDenver&mode=WEEK&showPrint=0&showTabs=0"
-                 width="850" height="300" frameborder="0" scrolling="no"></iframe>
-
+                <h1>Family Calendar</h1>
+                <iframe
+                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23dae8f6&title=The%20Valentine%20Family%20&src=ZmFtaWx5MTczOTkyMzUzMTkxNzMzMTYwOTdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23A79B8E"
+                    width="850" height="600" frameborder="0" scrolling="yes"></iframe>
+                <h1>Violet's Calendar</h1>
+                <iframe
+                    src="https://calendar.google.com/calendar/embed?src=purplepal96.8%40gmail.com&ctz=America%2FDenver&color=%23A79B8E&mode=WEEK"
+                    width="750" height="300" frameborder="0" scrolling="yes"></iframe>
+                <h1>David's Calendar</h1>
+                <iframe class="calendar cthree"
+                    src="https://calendar.google.com/calendar/embed?src=centervalentine%40gmail.com&ctz=America%2FDenver&mode=WEEK&showPrint=0&showTabs=0&color=%23A79B8E"
+                    width="750" height="300" frameborder="0" scrolling="yes"></iframe>
         </section>
     </main>
     <footer>
@@ -113,6 +117,7 @@
                 <h2>The Valentines</h2>
             </div>
             <div id="currentyear"></div>
+            <div id="number-of-visits"></div>
             <div id="lastModified"></div>
     </footer>
 </body>
