--- a/project/budgets.html
+++ b/project/budgets.html
@@ -8,7 +8,7 @@
     <meta name="author" content="David Valentine">
     <meta name="description" content="The home page website for the Valentine Family">
     <link rel="stylesheet" href="styles/project.css">
-    <!-- <link rel="stylesheet" href="styles/project-mobile.css"> -->
+    <link rel="stylesheet" href="styles/project-mobile.css">
 
 </head>
 <header>
@@ -21,10 +21,9 @@
         </div>
         <div class="subline"></div>
     </div>
-
     <nav>
         <ul class="navigation">
-            <li><a href="./project.html">Home</a></li>
+            <li> <a href="project.html">Home</a></li>
             <li><a href="budgets.html">Budget</a></li>
             <li><a href="gallery.html">Gallery</a></li>
         </ul>
@@ -291,6 +290,7 @@
             <h2>The Valentines</h2>
         </div>
         <div id="currentyear"></div>
+        <div id="number-of-visits"></div>
         <div id="lastModified"></div>
 </footer>
 <script src="scripts/getdates.js" defer></script>
