--- a/project/gallery.html
+++ b/project/gallery.html
@@ -26,7 +26,7 @@
 
         <nav>
             <ul class="navigation">
-                <li><a href="./project.html">Home</a></li>
+                <li> <a href="project.html">Home</a></li>
                 <li><a href="budgets.html">Budget</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
             </ul>
@@ -44,7 +44,7 @@
         </div>
         <section class="gallery-start">
             <div>
-                <h2 class="active-selection"></h2>
+                <!-- <h2 class="active-selection"></h2> -->
                 <script type="module" src=".scripts/gallery-json.js"></script>
                 <div class="gallery-cards"></div>
         </section>
@@ -62,6 +62,7 @@
                 <h2>The Valentines</h2>
             </div>
             <div id="currentyear"></div>
+            <div id="number-of-visits"></div>
             <div id="lastModified"></div>
     </footer>
 </body>
