--- a/project/project.html
+++ b/project/project.html
@@ -8,7 +8,9 @@
     <meta name="author" content="David Valentine">
     <meta name="description" content="The home page website for the Valentine Family">
     <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="styles/project-small.css">
     <link rel="stylesheet" href="styles/project-mobile.css">
+    
 
 </head>
 
@@ -82,26 +84,29 @@
                 <!-- </aside> -->
             </div>
         </section>
-        <div class="sublines sublineshero">
-            <div class="subline"></div>
-            <div class="h1title h1block h2block sectionstarter">
-                <h2>Family Plans</h1>
+        <section class="slhero">
+            <div class="sublines sublineshero">
+                <div class="subline"></div>
+                <div class="h1title h1block h2block sectionstarter">
+                    <h2>Family Plans</h1>
+                </div>
+                <div class="subline"></div>
             </div>
-            <div class="subline"></div>
-        </div>
+            
+        </section>
         <section class="family-plans">
-                <h1>Family Calendar</h1>
-                <iframe
-                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23dae8f6&title=The%20Valentine%20Family%20&src=ZmFtaWx5MTczOTkyMzUzMTkxNzMzMTYwOTdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23A79B8E"
-                    width="850" height="600" frameborder="0" scrolling="yes"></iframe>
-                <h1>Violet's Calendar</h1>
-                <iframe
-                    src="https://calendar.google.com/calendar/embed?src=purplepal96.8%40gmail.com&ctz=America%2FDenver&color=%23A79B8E&mode=WEEK"
-                    width="750" height="300" frameborder="0" scrolling="yes"></iframe>
-                <h1>David's Calendar</h1>
-                <iframe class="calendar cthree"
-                    src="https://calendar.google.com/calendar/embed?src=centervalentine%40gmail.com&ctz=America%2FDenver&mode=WEEK&showPrint=0&showTabs=0&color=%23A79B8E"
-                    width="750" height="300" frameborder="0" scrolling="yes"></iframe>
+            <h1>Family Calendar</h1>
+            <iframe
+                src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23dae8f6&title=The%20Valentine%20Family%20&src=ZmFtaWx5MTczOTkyMzUzMTkxNzMzMTYwOTdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23A79B8E"
+                width="850" height="600" frameborder="0" scrolling="yes"></iframe>
+            <h1>Violet's Calendar</h1>
+            <iframe
+                src="https://calendar.google.com/calendar/embed?src=purplepal96.8%40gmail.com&ctz=America%2FDenver&color=%23A79B8E&mode=WEEK"
+                width="750" height="300" frameborder="0" scrolling="yes"></iframe>
+            <h1>David's Calendar</h1>
+            <iframe class="calendar cthree"
+                src="https://calendar.google.com/calendar/embed?src=centervalentine%40gmail.com&ctz=America%2FDenver&mode=WEEK&showPrint=0&showTabs=0&color=%23A79B8E"
+                width="750" height="300" frameborder="0" scrolling="yes"></iframe>
         </section>
     </main>
     <footer>
