--- a/project/project.html
+++ b/project/project.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="styles/project.css">
     <link rel="stylesheet" href="styles/project-small.css">
     <link rel="stylesheet" href="styles/project-mobile.css">
-    
 
 </head>
 
@@ -76,7 +75,7 @@
                         <source media="(max-width: 800px)" srcset="./images/baby-mobile.jpeg">
                         <!-- min-width="200" min-height="180" -->
                         <source media="(max-width: 1000px)" srcset="./images/baby-mobile.jpeg">
-                        <img src="./images/baby.png" alt="Baby Shark">
+                        <img src="./images/baby1.jpeg" alt="Baby Shark">
                         <!-- min-width="200" min-height="180" lazy="loading" -->
                     </picture>
                     <figcaption>Baby Shark</figcaption>
@@ -92,7 +91,7 @@
                 </div>
                 <div class="subline"></div>
             </div>
-            
+
         </section>
         <section class="family-plans">
             <h1>Family Calendar</h1>
