--- a/project/project.html
+++ b/project/project.html
@@ -95,15 +95,15 @@
         </section>
         <section class="family-plans">
             <h1>Family Calendar</h1>
-            <iframe
+            <iframe title="Family Calendar"
                 src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FDenver&bgcolor=%23dae8f6&title=The%20Valentine%20Family%20&src=ZmFtaWx5MTczOTkyMzUzMTkxNzMzMTYwOTdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%23A79B8E"
                 width="850" height="600" frameborder="0" scrolling="yes"></iframe>
             <h1>Violet's Calendar</h1>
-            <iframe
+            <iframe title="Violet's Calendar"
                 src="https://calendar.google.com/calendar/embed?src=purplepal96.8%40gmail.com&ctz=America%2FDenver&color=%23A79B8E&mode=WEEK"
                 width="750" height="300" frameborder="0" scrolling="yes"></iframe>
             <h1>David's Calendar</h1>
-            <iframe class="calendar cthree"
+            <iframe class="calendar cthree" title="David's Calendar"
                 src="https://calendar.google.com/calendar/embed?src=centervalentine%40gmail.com&ctz=America%2FDenver&mode=WEEK&showPrint=0&showTabs=0&color=%23A79B8E"
                 width="750" height="300" frameborder="0" scrolling="yes"></iframe>
         </section>
